// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tutorial/LineTutorial Desktop 1`] = `
<LineTutorialDesktop>
  <div
    className="makeStyles-root"
  >
    <LinePreview
      autoplay={true}
      className="makeStyles-linePreview"
      images={
        Array [
          Object {},
        ]
      }
    >
      <div
        className="makeStyles-root makeStyles-linePreview"
      >
        <img
          alt={Object {}}
          className="makeStyles-device"
          src={Object {}}
        />
        <div
          className="makeStyles-slider makeStyles-slider"
        >
          <div
            className="makeStyles-slideWrapper"
            key="0"
          >
            <Screenshot
              key=".$[object Object]"
              screenshotUrl={Object {}}
            >
              <div
                className="makeStyles-screenshot makeStyles-screenshot"
              />
            </Screenshot>
          </div>
        </div>
      </div>
    </LinePreview>
    <Accordion
      activeIndex={0}
      className="makeStyles-accordion"
      data={
        Array [
          Object {
            "content": "While a lot of instant messages are disseminated among our friends' chatroom, you might feel confused whether the information is fake or not.",
            "id": 0,
            "images": Array [
              Object {},
            ],
            "title": "Recieved doubtful messages from social platform",
          },
          Object {
            "content": "You are encouraged to share to suspicious message to Cofacts chatbot, Cofacts chatbot would help you submit the misinformation to Cofacts fact-checking platform for receiveing similar fact-check reports.",
            "id": 1,
            "images": Array [
              Object {},
              Object {},
            ],
            "title": "Share this message to Cofacts",
          },
          Object {
            "content": "Everyone could review the suspicious messages on Cofacts platform, and discuss the fact-checking process and detail.",
            "id": 3,
            "images": Array [
              Object {},
              Object {},
            ],
            "title": "Submit to Cofacts database & fact-checking platform",
          },
          Object {
            "content": "Every volunteers could login Cofacts platform, and submit their fact-checking reports. Volunteers are asked to provide reference and explanation for the fact-checking.",
            "id": 4,
            "images": Array [
              Object {},
            ],
            "title": "Fact checkers would comment fact-checking detail on the platform.",
          },
          Object {
            "content": "Fact-checking contribution would be seen via Cofacts chatbot for everyone; if you think you could improve the content, you are encouraged to submit a new fact-checking reply.",
            "id": 5,
            "images": Array [
              Object {},
              Object {},
            ],
            "title": "Cofacts chatnot would reply this automatically",
          },
        ]
      }
      onClick={[Function]}
    >
      <div
        className="makeStyles-accordion"
      >
        <div
          className="makeStyles-item"
          key="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-title makeStyles-activeTitle"
          >
            Recieved doubtful messages from social platform
          </div>
          <div
            className="makeStyles-contentWrapper makeStyles-activeContentWrapper"
          >
            <div
              className="makeStyles-content"
            >
              While a lot of instant messages are disseminated among our friends' chatroom, you might feel confused whether the information is fake or not.
            </div>
          </div>
        </div>
        <div
          className="makeStyles-item"
          key="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-title"
          >
            Share this message to Cofacts
          </div>
          <div
            className="makeStyles-contentWrapper"
          >
            <div
              className="makeStyles-content"
            >
              You are encouraged to share to suspicious message to Cofacts chatbot, Cofacts chatbot would help you submit the misinformation to Cofacts fact-checking platform for receiveing similar fact-check reports.
            </div>
          </div>
        </div>
        <div
          className="makeStyles-item"
          key="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-title"
          >
            Submit to Cofacts database & fact-checking platform
          </div>
          <div
            className="makeStyles-contentWrapper"
          >
            <div
              className="makeStyles-content"
            >
              Everyone could review the suspicious messages on Cofacts platform, and discuss the fact-checking process and detail.
            </div>
          </div>
        </div>
        <div
          className="makeStyles-item"
          key="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-title"
          >
            Fact checkers would comment fact-checking detail on the platform.
          </div>
          <div
            className="makeStyles-contentWrapper"
          >
            <div
              className="makeStyles-content"
            >
              Every volunteers could login Cofacts platform, and submit their fact-checking reports. Volunteers are asked to provide reference and explanation for the fact-checking.
            </div>
          </div>
        </div>
        <div
          className="makeStyles-item"
          key="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-title"
          >
            Cofacts chatnot would reply this automatically
          </div>
          <div
            className="makeStyles-contentWrapper"
          >
            <div
              className="makeStyles-content"
            >
              Fact-checking contribution would be seen via Cofacts chatbot for everyone; if you think you could improve the content, you are encouraged to submit a new fact-checking reply.
            </div>
          </div>
        </div>
      </div>
    </Accordion>
  </div>
</LineTutorialDesktop>
`;

exports[`Storyshots Tutorial/LineTutorial Mobile 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <LineTutorialMobile>
    <div
      className="makeStyles-slider makeStyles-root"
    >
      <div
        className="makeStyles-slideWrapper makeStyles-slideWrapper"
        key="0"
      >
        <div
          className="makeStyles-slide"
          key=".$0"
        >
          <LinePreview
            autoplay={true}
            className="makeStyles-linePreview"
            images={
              Array [
                Object {},
              ]
            }
          >
            <div
              className="makeStyles-root makeStyles-linePreview"
            >
              <img
                alt={Object {}}
                className="makeStyles-device"
                src={Object {}}
              />
              <div
                className="makeStyles-slider makeStyles-slider"
              >
                <div
                  className="makeStyles-slideWrapper"
                  key="0"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
              </div>
            </div>
          </LinePreview>
          <div
            className="makeStyles-info"
          >
            <div
              className="makeStyles-title makeStyles-activeTitle"
            >
              Recieved doubtful messages from social platform
            </div>
            <div
              className="makeStyles-content"
            >
              While a lot of instant messages are disseminated among our friends' chatroom, you might feel confused whether the information is fake or not.
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-slideWrapper makeStyles-slideWrapper"
        key="1"
      >
        <div
          className="makeStyles-slide"
          key=".$1"
        >
          <LinePreview
            autoplay={false}
            className="makeStyles-linePreview"
            images={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <div
              className="makeStyles-root makeStyles-linePreview"
            >
              <img
                alt={Object {}}
                className="makeStyles-device"
                src={Object {}}
              />
              <div
                className="makeStyles-slider makeStyles-slider"
              >
                <div
                  className="makeStyles-slideWrapper"
                  key="0"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
                <div
                  className="makeStyles-slideWrapper"
                  key="1"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
              </div>
              <div
                className="makeStyles-pagination"
              >
                <div
                  className="makeStyles-page makeStyles-activePage"
                  key="0"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                />
                <div
                  className="makeStyles-page"
                  key="1"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                />
              </div>
            </div>
          </LinePreview>
          <div
            className="makeStyles-info"
          >
            <div
              className="makeStyles-title"
            >
              Share this message to Cofacts
            </div>
            <div
              className="makeStyles-content"
            >
              You are encouraged to share to suspicious message to Cofacts chatbot, Cofacts chatbot would help you submit the misinformation to Cofacts fact-checking platform for receiveing similar fact-check reports.
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-slideWrapper makeStyles-slideWrapper"
        key="2"
      >
        <div
          className="makeStyles-slide"
          key=".$3"
        >
          <LinePreview
            autoplay={false}
            className="makeStyles-linePreview"
            images={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <div
              className="makeStyles-root makeStyles-linePreview"
            >
              <img
                alt={Object {}}
                className="makeStyles-device"
                src={Object {}}
              />
              <div
                className="makeStyles-slider makeStyles-slider"
              >
                <div
                  className="makeStyles-slideWrapper"
                  key="0"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
                <div
                  className="makeStyles-slideWrapper"
                  key="1"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
              </div>
              <div
                className="makeStyles-pagination"
              >
                <div
                  className="makeStyles-page makeStyles-activePage"
                  key="0"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                />
                <div
                  className="makeStyles-page"
                  key="1"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                />
              </div>
            </div>
          </LinePreview>
          <div
            className="makeStyles-info"
          >
            <div
              className="makeStyles-title"
            >
              Submit to Cofacts database & fact-checking platform
            </div>
            <div
              className="makeStyles-content"
            >
              Everyone could review the suspicious messages on Cofacts platform, and discuss the fact-checking process and detail.
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-slideWrapper makeStyles-slideWrapper"
        key="3"
      >
        <div
          className="makeStyles-slide"
          key=".$4"
        >
          <LinePreview
            autoplay={false}
            className="makeStyles-linePreview"
            images={
              Array [
                Object {},
              ]
            }
          >
            <div
              className="makeStyles-root makeStyles-linePreview"
            >
              <img
                alt={Object {}}
                className="makeStyles-device"
                src={Object {}}
              />
              <div
                className="makeStyles-slider makeStyles-slider"
              >
                <div
                  className="makeStyles-slideWrapper"
                  key="0"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
              </div>
            </div>
          </LinePreview>
          <div
            className="makeStyles-info"
          >
            <div
              className="makeStyles-title"
            >
              Fact checkers would comment fact-checking detail on the platform.
            </div>
            <div
              className="makeStyles-content"
            >
              Every volunteers could login Cofacts platform, and submit their fact-checking reports. Volunteers are asked to provide reference and explanation for the fact-checking.
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-slideWrapper makeStyles-slideWrapper"
        key="4"
      >
        <div
          className="makeStyles-slide"
          key=".$5"
        >
          <LinePreview
            autoplay={false}
            className="makeStyles-linePreview"
            images={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <div
              className="makeStyles-root makeStyles-linePreview"
            >
              <img
                alt={Object {}}
                className="makeStyles-device"
                src={Object {}}
              />
              <div
                className="makeStyles-slider makeStyles-slider"
              >
                <div
                  className="makeStyles-slideWrapper"
                  key="0"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
                <div
                  className="makeStyles-slideWrapper"
                  key="1"
                >
                  <Screenshot
                    key=".$[object Object]"
                    screenshotUrl={Object {}}
                  >
                    <div
                      className="makeStyles-screenshot makeStyles-screenshot"
                    />
                  </Screenshot>
                </div>
              </div>
              <div
                className="makeStyles-pagination"
              >
                <div
                  className="makeStyles-page makeStyles-activePage"
                  key="0"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                />
                <div
                  className="makeStyles-page"
                  key="1"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                />
              </div>
            </div>
          </LinePreview>
          <div
            className="makeStyles-info"
          >
            <div
              className="makeStyles-title"
            >
              Cofacts chatnot would reply this automatically
            </div>
            <div
              className="makeStyles-content"
            >
              Fact-checking contribution would be seen via Cofacts chatbot for everyone; if you think you could improve the content, you are encouraged to submit a new fact-checking reply.
            </div>
          </div>
        </div>
      </div>
    </div>
  </LineTutorialMobile>
</div>
`;
